2012-11-07  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Unreviewed gardening

        Some image expectetions was accidentally added for reference tests and it consused nrwt.
        Deleted them.

        * platform/qt-5.0-wk2/compositing/text-on-scaled-layer-expected.png: Removed.
        * platform/qt-5.0-wk2/compositing/text-on-scaled-surface-expected.png: Removed.
        * platform/qt/css2.1/20110323/margin-collapse-clear-016-expected.png: Removed.
        * platform/qt/svg/animations/animateMotion-additive-2c-expected.png: Removed.

2012-11-07  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Adding a timeout expectation for the test introduced in r133660.
        Adding timeout expectations for two media tests that started timing
        out probably after r133633.

        * platform/gtk/TestExpectations:

2012-11-07  Dominik Röttsches  <dominik.rottsches@intel.com>

        [EFL] Unreviewed gardening.

        Rebaselining a few ruby tests.

        * platform/efl/fast/writing-mode/japanese-ruby-horizontal-bt-expected.png:
        * platform/efl/fast/writing-mode/japanese-ruby-horizontal-bt-expected.txt:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-lr-expected.png:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-lr-expected.txt:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-rl-expected.png:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-rl-expected.txt:

2012-11-07  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening after r133688, remove unnecessary platform specific expected files.

        * platform/qt/http/tests/security/aboutBlank/xss-DENIED-navigate-opener-document-write-expected.txt: Removed.
        * platform/qt/http/tests/security/aboutBlank/xss-DENIED-navigate-opener-javascript-url-expected.txt: Removed.
        * platform/qt/http/tests/security/aboutBlank/xss-DENIED-set-opener-expected.txt: Removed.
